testdata/baselines/reference/submodule/compiler/jsxFragmentWrongType.errors.txt
a.tsx(7,47): error TS2322: Type '() => string' is not assignable to type 'ReactNode'.
  Type '() => string' is not assignable to type 'ReactElement<any, string | JSXElementConstructor<any>> | ReactFragment | ReactPortal'.


==== a.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    const test = () => "asd";
    
    const jsxWithJsxFragment = <>{test}</>;
    const jsxWithReactFragment = <React.Fragment>{test}</React.Fragment>;
                                                  ~~~~
!!! error TS2322: Type '() => string' is not assignable to type 'ReactNode'.
!!! error TS2322:   Type '() => string' is not assignable to type 'ReactElement<any, string | JSXElementConstructor<any>> | ReactFragment | ReactPortal'.
!!! related TS6212 a.tsx:7:47: Did you mean to call this expression?
    